get actors example